force-app/main/default/objects/CorporateHousingRegulationPattern__c/CorporateHousingRegulationPattern__c.object-meta.xml
<CustomObject>
    <label>社宅規定パターン</label>
    <nameField>
        <label>社宅規定パターン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>