force-app/main/default/objects/CorporateHousingRegulationPattern__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipLabel>社宅規定パターン</relationshipLabel>
    <relationshipName>CorporateHousingRegulationPattern_CHR</relationshipName>
    <type>Lookup</type>
</CustomField>