force-app/main/default/objects/CorporateHousingRegulationPattern__c/fields/DistrictMaster__c.field-meta.xml
<CustomField>
    <fullName>DistrictMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>地区マスタ</label>
    <referenceTo>DistrictMaster__c</referenceTo>
    <relationshipLabel>社宅規定パターン</relationshipLabel>
    <relationshipName>DistrictMaster_CHRP</relationshipName>
    <type>Lookup</type>
</CustomField>