force-app/main/default/objects/CorporateHousingRegulationPattern__c/fields/RelocationShapeMaster__c.field-meta.xml
<CustomField>
    <fullName>RelocationShapeMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>赴任形態マスタ</label>
    <referenceTo>RelocationShapeMaster__c</referenceTo>
    <relationshipLabel>社宅規定パターン</relationshipLabel>
    <relationshipName>RelocationShapeMaster_CHRP</relationshipName>
    <type>Lookup</type>
</CustomField>