force-app/main/default/objects/CorporateHousingRegulationPattern__c/fields/UpperLimitRent__c.field-meta.xml
<CustomField>
    <fullName>UpperLimitRent__c</fullName>
    <label>上限家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>