force-app/main/default/objects/CorporateHousingRegulationPattern__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CorporateHousingRegulation__c</columns>
    <columns>DistrictMaster__c</columns>
    <columns>TitleMaster__c</columns>
    <columns>RelocationShapeMaster__c</columns>
    <columns>UpperLimitRent__c</columns>
    <columns>AreaUpperLimit__c</columns>
    <columns>FloorPlanRegulation1__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>